<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
        >
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/li_welcome_paragraph1"
            android:textSize="20sp"
            />
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/li_welcome_paragraph2"
            android:textSize="20sp"
            />
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/li_welcome_paragraph3"
            android:textSize="20sp"
            />
    <Button
            android:id="@+id/next_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/li_next"
            />

    <Button
            android:id="@+id/next_button_with_oauth"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/li_next_with_oauth"
            />
</LinearLayout>

