<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
        >

    <ImageButton
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:id="@+id/user_avatar"
            android:layout_gravity="center"
            android:adjustViewBounds="false"
            android:layout_margin="10dp"
            android:contentDescription="@string/user_image_content_description"
            />

    <GridLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:rowCount="4"
            android:columnCount="2"
            android:layout_gravity="right|center_vertical">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/user_name"
                android:text="@string/user_name_text"
                android:layout_column="0"
                android:layout_row="0"/>

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/user_name_value"
                android:layout_gravity="fill_horizontal"
                android:layout_column="1"
                android:layout_row="0"
                android:inputType="text"
                />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/user_last_name"
                android:text="@string/user_last_name_text"
                android:layout_column="0"
                android:layout_row="1"
                />

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/user_last_name_value"
                android:layout_gravity="fill_horizontal"
                android:layout_column="1"
                android:layout_row="1"
                android:inputType="text"
                />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/user_email"
                android:text="@string/user_email_text"
                android:layout_column="0"
                android:layout_row="2"
                />

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/user_email_value"
                android:layout_gravity="fill_horizontal"
                android:layout_column="1"
                android:layout_row="2"
                android:inputType="textEmailAddress"
                />

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnSpan="2"
                android:text="@string/save_user_button_text"
                android:id="@+id/save_user_button"
                android:layout_row="3"
                android:layout_column="0"
                android:layout_gravity="center_horizontal"/>

    </GridLayout>

</LinearLayout>